--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-redis-pool",
+  "name": "redis-pool",
   "description": "Pool redis connections for Node.JS",
   "version": "0.1.0",
   "author": "Valentin Morenko <valzon90@gmail.com>",
