--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "redis-pool",
+  "name": "pool-redis",
   "description": "Pool redis connections for Node.JS",
   "version": "0.1.0",
   "author": {
     "name": "Valentin Morenko",
     "email": "valzon90@gmail.com"
   },
+  "keywords": ["pool", "redis"],
   "main": "index.js",
   "repository": {
     "type": "git",
